documents/blog/helm-chart-with-multiple-apps/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: service-foundry-community-ingress-route
  namespace: service-foundry
spec:
  entryPoints:
    - web
    - websecure

  routes:

    - match: Host(`community.servicefoundry.org`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: service-foundry-community-backend
          port: http
      middlewares:
        - name: cors-headers
        - name: forward-auth
        - name: api-stripprefix



    - match: Host(`community.servicefoundry.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: service-foundry-community-frontend
          port: http
      middlewares:
        - name: cors-headers
        - name: forward-auth
